--- a/wercker.yml
+++ b/wercker.yml
@@ -56,9 +56,15 @@ dev:
         code: |
           python manage.py migrate
     - script:
+        name: Run celery
+        code: |
+           adduser --disabled-password --gecos '' celery_user
+           celery worker -A nexchange --uid=celery_user -l info &
+           celery beat -A nexchange -l info &
+    - script:
         name: Django compile messages
         code: |
-           # python manage.py compilemessages
+            python manage.py compilemessages
     - script:
       name: Django create superuser
       code: |
@@ -98,15 +104,7 @@ dev:
           cd .git/hooks/
           ln -fs ../../.pre-commit.sh pre-commit
           cd -
-    - script:
-        name: Run rqscheduler and rq worker
-        code: |
-          rqscheduler -H ${REDIS_PORT_6379_TCP_ADDR} &
-          rq worker -u ${REDIS_PORT_6379_TCP} &
-    - script:
-        name: Start payment_release command
-        code: |
-            python manage.py payment_release
+
     - create-file:
         name: Create cron invoked script to run ticker
         filename: /ticker.sh
