--- a/wercker.yml
+++ b/wercker.yml
@@ -91,6 +91,10 @@ dev:
         code: |
           python manage.py loaddata core/fixtures/payment_preference.json
     - script:
+        name: Django import Payment CmsPage fixture
+        code: |
+          python manage.py loaddata core/fixtures/cmspages.json
+    - script:
         name: Django import Withdraw address fixture
         code: |
           python manage.py loaddata core/fixtures/withdraw_address.json
