--- a/wercker.yml
+++ b/wercker.yml
@@ -225,6 +225,7 @@ build:
           # Import fixtures
           python /usr/src/app/manage.py loaddata core/fixtures/currency.json
           python /usr/src/app/manage.py loaddata core/fixtures/payment_method.json
+          python /usr/src/app/manage.py loaddata core/fixtures/payment_preferences.json
           python /usr/src/app/manage.py loaddata core/fixtures/affiliate_program.json
           echo "To load the 'withdraw_address' fixture, uncomment the next line"
           # python manage.py loaddata core/fixtures/withdraw_address.json
