--- a/wercker.yml
+++ b/wercker.yml
@@ -315,7 +315,7 @@ build:
         working-dir: /usr/src/app
 
 deploy:
-  box: legoheld/docker-gitlab-ci-ssh
+  box: alpine:latest
   steps:
     - install-packages:
       packages: knockd
