--- a/nginx.conf
+++ b/nginx.conf
@@ -71,7 +71,7 @@ http {
 
     # Unit pay validation
     location unitpay-f699.txt {
-        try_files static/misc/unitpay-f699.txt;
+        try_files $uri static/misc/unitpay-f699.txt;
     }
 
     location @proxy_to_app {
