--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nexchange Project",
   "main": "index.js",
   "dependencies": {
-    "bower": "~1.7.9"
+    "bower": "~1.7.9",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "browserify": "latest",
