--- a/requirements.txt
+++ b/requirements.txt
@@ -66,5 +66,5 @@ braintree>=3.30.0
 pyopenssl
 django-session-security
 django-axes
--e git://github.com/veox/python3-krakenex.git#egg=krakenx
--e git://github.com/byrnereese/uphold-sdk-python.git#egg=uphold
+-e git+https://github.com/veox/python3-krakenex.git#egg=krakenx
+-e git+https://github.com/byrnereese/uphold-sdk-python.git#egg=uphold
