--- a/wercker.yml
+++ b/wercker.yml
@@ -213,6 +213,8 @@ build:
           export NEW_RELIC_CONFIG_FILE=${NEW_RELIC_CONFIG_FILE}
           export NEW_RELIC_ENVIRONMENT=${NEW_RELIC_ENVIRONMENT}
           export NEW_RELIC_LICENSE_KEY=${NEW_RELIC_LICENSE_KEY}
+          export REDIS_PORT_6379_TCP_ADDR=${REDIS_PORT_6379_TCP_ADDR}
+          export REDIS_PORT_6379_TCP_PORT=${REDIS_PORT_6379_TCP_PORT}
           #
           while ! nc -z ${POSTGIS_PORT_5432_TCP_ADDR} ${POSTGIS_PORT_5432_TCP_PORT}
           do
@@ -245,12 +247,20 @@ build:
           #
           # Start Cron Process
           cron
+
           # Start celery stuff
           adduser --disabled-password --gecos '' celery_user
           celery worker -A nexchange --uid=celery_user -l info &
           celery beat -A nexchange -l info &
+
           echo "Gunicorn start"
           exec newrelic-admin run-program gunicorn --chdir /usr/src/app --name nexchange --bind 0.0.0.0:${GUNICORN_PORT} --workers 3 --log-level=info --log-file=/var/log/gunicorn_error.log --access-logfile=/var/log/gunicorn_access.log nexchange.wsgi:application "$@"
+
+          # Remove entrypoint in production to protect data
+          echo "from django.conf import settings; import os; int_debug = 1 if settings.DEBUG else 0; os.environ['PYDEBUG']=int_debug" | python manage.py shell
+          if ! [ $PYDEBUG ]; then
+            rm $0
+          fi
     - script:
         name: set entrypoint as executable
         code: |
