--- a/wercker.yml
+++ b/wercker.yml
@@ -50,9 +50,13 @@ dev:
     - script:
         name: Run celery
         code: |
-           adduser --disabled-password --gecos '' celery_user
-           celery worker -A nexchange --uid=celery_user -l info &
-           celery beat -A nexchange -l info &
+          # Start celery stuff
+          adduser --disabled-password --gecos '' celery_user
+          touch /var/log/celeryd.log
+          touch /var/log/celery-beat.log
+          chown celery_user /var/log/celery*
+          celery worker -A nexchange --uid=celery_user -l info -f /var/log/celeryd.log &
+          celery beat -A nexchange -l info -f /var/log/celery-beat.log &
     - script:
         name: Django compile messages
         code: |
