--- a/nginx.conf
+++ b/nginx.conf
@@ -31,12 +31,12 @@ http {
   }
 
   server {
-      listen 80;
+      listen 80 http2;
       return 301 https://$host$request_uri;
   }
 
   server {
-    listen 443;
+    listen 443 http2;
     
     ssl on;
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
