--- a/wercker.yml
+++ b/wercker.yml
@@ -388,7 +388,7 @@ tests:
         name: Backend tests
         code: |
           coverage erase
-          coverage run --source="." manage.py test --pattern="*_test.py"
+          coverage run --source="." manage.py test --pattern="**/tests/**/**.py"
           coverage report
           coverage html -d cover
     - script:
