Css improvements, model implementation of OG resurces

--- a/requirements.txt
+++ b/requirements.txt
@@ -68,3 +68,4 @@ django-session-security
 django-axes
 -e git+https://github.com/veox/python3-krakenex.git#egg=krakenx
 -e git+https://github.com/byrnereese/uphold-sdk-python.git#egg=uphold
+-e git+https://github.com/onitsoft/python-opengraph#egg=opengraph
