add SEPA and SWIFT WIP, add Skrill

--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ http {
 
 
     # the domain name it will serve for
-    server_name staging.nexchange.ru nexchange.ru www.nexchange.ru staging.nexchange.co.uk nexchange..co.uk www.nexchange.co.uk;  # site public FQDN
+    server_name staging.nexchange.ru nexchange.ru www.nexchange.ru staging.nexchange.co.uk nexchange.co.uk www.nexchange.co.uk;  # site public FQDN
     charset     utf-8;
 
     # max upload size
