--- a/static/bower.json
+++ b/static/bower.json
@@ -23,7 +23,8 @@
     "x-editable": "^1.5.1",
     "card": "https://github.com/onitsoft/card.git",
     "intl-tel-input": "https://github.com/onitsoft/intl-tel-input.git",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "iCheck": "^1.0.2"
   },
   "devDependencies": {
     "jasmine-core": "jasmine#^2.4.1",
