redirect form onit to nexchange

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,12 @@ http {
 
   server {
       listen 80;
+      server_name .onit.ws;
+      return 301 https://nexchange.co.uk;
+  }
+
+  server {
+      listen 80;
       return 301 https://$host$request_uri;
   }
 
