--- a/wercker.yml
+++ b/wercker.yml
@@ -235,12 +235,13 @@ build:
           export SECRET_KEY=${SECRET_KEY}
 
           # YANDEX
-          export YANDEX_METRICA_ID=${YANDEX_METRICA_ID}
+          export YANDEX_METRICA_ID_UK=${YANDEX_METRICA_ID_UK}
+          export YANDEX_METRICA_ID_RU=${YANDEX_METRICA_ID_RU}
 
           # GA
-          export GOOGLE_ANALYTICS_PROPERTY_ID=${GOOGLE_ANALYTICS_PROPERTY_ID}
-          export GOOGLE_ANALYTICS_DOMAIN=${GOOGLE_ANALYTICS_DOMAIN}
-          
+          export GOOGLE_ANALYTICS_PROPERTY_ID_UK=${GOOGLE_ANALYTICS_PROPERTY_ID_UK}
+          export GOOGLE_ANALYTICS_PROPERTY_ID_RU=${GOOGLE_ANALYTICS_PROPERTY_ID_RU}
+
           # CAPTCHA
           export RECAPTCHA_SITEKEY=${RECAPTCHA_SITEKEY}
           export RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}
