--- a/wercker.yml
+++ b/wercker.yml
@@ -233,7 +233,10 @@ build:
           # DJ SECRET
 
           export SECRET_KEY='${SECRET_KEY}'
-
+          # DEBUG
+          export DEBUG=${DEBUG}
+          export CELERY_ALWAYS_EAGER=${CELERY_ALWAYS_EAGER}
+          export UPHOLD_IS_TEST=${UPHOLD_IS_TEST}
           # YANDEX
           export YANDEX_METRICA_ID_UK=${YANDEX_METRICA_ID_UK}
           export YANDEX_METRICA_ID_RU=${YANDEX_METRICA_ID_RU}
