--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bower": "~1.7.9",
     "toastr": "^2.1.2",
-    "browserify": "latest"
+    "browserify": "<14"
   },
   "devDependencies": {
     "htmllint-cli": "0.0.5",
