--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         volumes:
             - /nexchange/mediafiles:/usr/share/nginx/html/media
             - /nexchange/staticfiles:/usr/share/nginx/html/static
-            - /var/log/nexchange_app:/var/log
+            - /var/log/nexchange_app:/var/log/nginx
 
         links:
             - postgis
