--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         volumes:
             - /nexchange/mediafiles:/usr/share/nginx/html/media
             - /nexchange/staticfiles:/usr/share/nginx/html/static
-            - /var/log/nexchange_app:/var/log/nginx
+            - /var/log/nexchange_app:/var/log
 
         links:
             - postgis
@@ -44,7 +44,7 @@ services:
             - /nexchange/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
             - /nexchange/mediafiles:/usr/share/nginx/html/media
             - /nexchange/staticfiles:/usr/share/nginx/html/static
-            - /var/log/nexchange_nginx:/var/log
+            - /var/log/nexchange_nginx:/var/log/nginx
         ports:
             - "80:80"
             - "443:443"
