added coveralls step

--- a/wercker.yml
+++ b/wercker.yml
@@ -457,6 +457,8 @@ tests:
         code: |
            export PHANTOMJS_BIN=${WERCKER_SOURCE_DIR}/node_modules/.bin/phantomjs
            npm run-script test
+    - tcnksm/goveralls:
+     token: $COVERALLS_TOKEN
     - script:
         name: Validate New Relic config file
         code: |
